--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -8,7 +8,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter="*.bank"
 exclude_filter=""
-export_path="../../GGJBuilds/1434/GGJ24_1434.exe"
+export_path="../../GGJBuilds/1456/GGJ24_1456.exe"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
@@ -38,7 +38,7 @@ application/icon_interpolation=4
 application/file_version=""
 application/product_version=""
 application/company_name=""
-application/product_name=""
+application/product_name="(S)Laughter"
 application/file_description=""
 application/copyright=""
 application/trademarks=""
